--- a/EventsAPI/Events.API/appsettings.Production.json
+++ b/EventsAPI/Events.API/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Database": "Server=localhost;Port=15432;Database=events_db;User Id=postgres;Password=postgres_test_radix!;"
+    "Database": "Server=postgres;Port=5432;Database=events_db;User Id=postgres;Password=postgres_test_radix!;"
   },
   "Logging": {
     "LogLevel": {
@@ -11,7 +11,7 @@
   },
   "AllowedHosts": "*",
   "RabbitMq": {
-    "HostName": "localhost",
+    "HostName": "rabbitmq",
     "Port": 5672,
     "UserName": "admin",
     "Password": "admin",
