--- a/EventsAPI/Events.API/appsettings.json
+++ b/EventsAPI/Events.API/appsettings.json
@@ -1,7 +1,4 @@
 {
-  "ConnectionStrings": {
-    "Database": "Server=localhost;Port=15432;Database=events_db;User Id=postgres;Password=postgres_test_radix!;"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,12 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "RabbitMq": {
-    "HostName": "localhost",
-    "Port": 5672,
-    "UserName": "admin",
-    "Password": "admin",
-    "QueueName": "EventQueue"
-  }
+  "AllowedHosts": "*"
 }
